@@ -7,7 +7,6 @@ import net.fabricmc.api.Environment;
 import net.minecraft.client.gui.screen.ScreenTexts;
 import net.minecraft.client.gui.widget.ClickableWidget;
 import net.minecraft.client.gui.widget.CyclingButtonWidget;
-import net.minecraft.client.option.CyclingOption;
 import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.text.LiteralText;
 import net.minecraft.text.OrderedText;
@@ -17,12 +16,12 @@ import net.minecraft.text.TranslatableText;
 import java.util.List;
 
 public class BooleanConfigOption extends ConfigOption<Boolean> {
-    public static final List<Boolean> BOOLEAN_VALUES = ImmutableList.of(Boolean.TRUE, Boolean.FALSE);
-    public final String translationKey;
-    public final boolean defaultValue;
-    public final Text enabledText;
-    public final Text disabledText;
-    public List<OrderedText> tooltips = List.of();
+    private static final List<Boolean> BOOLEAN_VALUES = ImmutableList.of(Boolean.TRUE, Boolean.FALSE);
+    private final String translationKey;
+    private final boolean defaultValue;
+    private final Text enabledText;
+    private final Text disabledText;
+    private List<OrderedText> tooltips = List.of();
 
     public BooleanConfigOption(String modId, String key, boolean defaultValue, String enabledKey, String disabledKey, AccessType accessType, List<OrderedText> tooltips) {
         this(modId, key, defaultValue, enabledKey, disabledKey, accessType);
@@ -63,34 +62,19 @@ public class BooleanConfigOption extends ConfigOption<Boolean> {
 
     public Boolean getDefaultValue() { return defaultValue; }
 
-    public Text getValueText() {
-        return new LiteralText(String.valueOf(ConfigOptionStorage.getBoolean(key)));
-    }
+    public Text getValueText() { return new LiteralText(String.valueOf(ConfigOptionStorage.getBoolean(key))); }
 
     public Text getButtonText() {
         return ScreenTexts.composeGenericOptionText(new TranslatableText(translationKey), getValue() ? enabledText : disabledText);
     }
 
-    public List<OrderedText> getTooltip() { return this.tooltips; }
-
     @Environment(EnvType.CLIENT)
     public ClickableWidget createButton(int x, int y, int width) {
-        CyclingButtonWidget.TooltipFactory<Boolean> tooltipFactory = value -> tooltips;
-        return (new CyclingButtonWidget.Builder<Boolean>(value -> value ? this.enabledText : this.disabledText).values(BOOLEAN_VALUES)
-                .tooltip(tooltipFactory)).initially(this.getValue())
-                .build(x, y, width, 20, new TranslatableText(this.translationKey), ((button, value) -> ConfigOptionStorage.setBoolean(this.getKey(), value)));
-    }
-
-    @Environment(EnvType.CLIENT)
-    @Override
-    public CyclingOption<Boolean> asOption() {
-        if (enabledText != null && disabledText != null) {
-            return CyclingOption.create(translationKey, enabledText, disabledText,
-                    ignored -> ConfigOptionStorage.getBoolean(key),
-                    (ignored, option, value) -> ConfigOptionStorage.setBoolean(key, value));
-        }
-        return CyclingOption.create(translationKey, ignored -> ConfigOptionStorage.getBoolean(key),
-                (ignored, option, value) -> ConfigOptionStorage.setBoolean(key, value));
+        return CyclingButtonWidget.builder(o -> this.getValueText()).values(BOOLEAN_VALUES).tooltip(factory -> tooltips).initially(this.getValue())
+                .build(x, y, width, 20, new TranslatableText(translationKey), ((button, value) -> {
+                    this.toggleValue();
+                    button.setValue(this.getValue());
+                }));
     }
 
     @Override
